Use JitPack jars vs. jars repo
* Remove GWT compilation which is not used anywhere in kbase based on a
github search, and has been removed from the java common jar.
* Remove TypeGeneratorTest.testProvenance, which tests the provenance
code in JsonServerServlet in java_common, which was removed in
java_common 0.1.0 6 years ago and TMK is unused in KBase